[workspace]
members = [
    "crates/bytebraise", "crates/bytebraise-datasmart", "crates/bytebraise-datasmart-macros",
    "crates/bytebraise-lexer",
    "crates/bytebraise-syntax",
    "crates/bytebraise-util"
]

exclude = [ "/.idea" ]
resolver = "3"

[workspace.package]
homepage = "https://github.com/Agilent/bytebraise"
repository = "https://github.com/Agilent/bytebraise"
authors = ["Chris Laplante <chris.laplante@agilent.com>"]
license = "GPL-2.0-only"
edition = "2024"
