[package]
name = "bytebraise-util"
version = "0.1.0"

edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
itertools = "0.14.0"
indexmap = "2"
rowan = "0.16.1"
regex = { version = "1", features = ["pattern"] }
