[package]
name = "bytebraise"
description = "Proof-of-concept experiment to see how much of BitBake can be implemented in Rust"
version = "0.1.4"
edition = "2024"

homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["from", "try_into"] }
im-rc = "15"
indexmap = "2"
lazy_static = "1"
once_cell = "1"
paste = "1"
regex = { version = "1", features = ["pattern"] }
scopeguard = "1"

pyo3 = { version = "0.19.2", features = ["auto-initialize", "anyhow"], optional = true }
python-parser = { version = "0.2.0", optional = true }

bytebraise-syntax = { path = "../bytebraise-syntax", version = "0.1.0" }
bytebraise-datasmart = { path = "../bytebraise-datasmart", version = "0.1.0" }
bytebraise-util = { path = "../bytebraise-util", version = "0.1.0" }

[features]
default = []
python = ["python-parser", "pyo3"]
